deployment/deployment-ngx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-ngx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deployment-ngx
  template:
    metadata:
      labels:
        app: deployment-ngx
    spec:
      containers:
        - name: ngx
          image: hello
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 250mi
              cpu: 250mi
      imagePullSecrets:
        - name: regred
