deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-puma
spec:
  selector:
    app: puma
  type: ClusterIP 
ports:
  - port: 3000
    targetPort: 80
