deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployment-ingress
  annotations:
    cert-manager.io/cluster-issuer: http01-cluster-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: nttets.selise.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nt-test
            port:
              number: 80
  tls:
    - hosts:
        - nttets.selise.dev
      secrectName: nttets.selise.dev
